--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "request": "^2.72.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "coffee-script": "^1.10.0",
     "hubot-test-helper": "^1.4.4",
-    "mocha": "^2.4.5",
-    "chai": "^3.5.0"
+    "mocha": "^2.4.5"
   }
 }
